Source/WebCore/platform/graphics/GraphicsContextState.cpp
@@ -36,6 +36,13 @@ GraphicsContextState::GraphicsContextState(const ChangeFlags& changeFlags, Inter
 {
 }
 
+GraphicsContextState GraphicsContextState::cloneForRecording() const
+{
+    auto clone = *this;
+    clone.m_changeFlags = { };
+    return clone;
+}
+
 bool GraphicsContextState::containsOnlyInlineChanges() const
 {
     if (m_changeFlags != (m_changeFlags & basicChangeFlags))
